--- a/sidebar.css
+++ b/sidebar.css
@@ -5,25 +5,23 @@
 	padding: .75rem 1rem;
 	margin-block: .5rem 0;
 	display: grid;
-	grid-template: auto auto / auto 5em;
+	grid-template: auto auto / auto minmax(5em, 1fr);
 	gap: .25rem;
+	align-items: baseline;
+}
+
+.s8-wheel-meta-boxes-read-out\/value.components-button {
+	gap: .25em;
+	font-size: 13px;
+}
+.s8-wheel-meta-boxes-read-out\/value::before {
+	content: '🔴';
+}
+.s8-wheel-meta-boxes-read-out\/value.\&impulsed::before {
+	content: '🟢';
 }
 
 .s8-wheel-meta-boxes-read-out > small {
 	font-size: 12px;
-}
-
-.s8-wheel-meta-boxes-read-out\/value {
-	flex-shrink: 0;
-	flex-basis: 5em;
-}
-.s8-wheel-meta-boxes-read-out\/value::before {
-	content: '🔴 ';
-}
-.s8-wheel-meta-boxes-read-out\/value.\&impulsed::before {
-	content: '🟢 ';
-}
-
-.s8-wheel-meta-boxes-read-out > small:last-child {
 	grid-column: span 2;
 }
